--- a/ServiceComplex/Pages/Products/Index.cshtml
+++ b/ServiceComplex/Pages/Products/Index.cshtml
@@ -32,67 +32,21 @@
                         <a asp-page="/Products/Create" class="btn btn-secondary btn-rounded btn-sm">افزودن محصول جدید</a>
                     </div>
                     <div class="table-responsive mb-4 mt-4">
-                        <table id="dataTable" class="table table-hover table-bordered cell-border row-border" style="width:100%">
+                        <table id="dataTable_1" class="table table-hover table-bordered cell-border row-border" style="width:100%">
                             <thead>
-                            <tr>
-                                <th>عکس</th>
-                                <th>نام</th>
-                                <th>گروه</th>
-                                <th> کد </th>
-                                <th>نوع مالیات</th>
-                                <th>قیمت 1</th>
-                                <th>وضعیت</th>
-                                <th>عملیات</th>
+                                <tr>
+                                    <th>عکس</th>
+                                    <th>نام</th>
+                                    <th>گروه</th>
+                                    <th> کد </th>
+                                    <th>نوع مالیات</th>
+@*                                    <th>قیمت 1</th>
+*@                                    <th>وضعیت</th>
+                                    <th>عملیات</th>
 
-                            </tr>
+                                </tr>
                             </thead>
                             <tbody>
-                            @foreach (var item in Model.Products)
-                            {
-                                <tr>
-                                    <td>
-                                        <img src="@($"data:image/png;base64,{Convert.ToBase64String(item.Image64)}")" style="max-width:60px"/>
-                                    </td>
-                                    <td>@item.PrdName</td>
-                                    <td>@item.PrdLvlName</td>
-                                    <td>@item.PrdCode</td>
-                                    <td>@item.TaxName</td>
-                                    <td>@item.PrdPricePerUnit1.ToString("#,0#")</td>
-
-                                    <td>
-                                        @if (item.PrdStatus != false)
-                                        {
-                                            <span>فعال</span>
-                                        }
-                                        else
-                                        {
-                                            <span>غیر فعال</span>
-                                        }
-                                    </td>
-                                    <td>
-
-                                        <a title="جزییات بیشستر" onclick="showModal('@item.PrdUid')">
-                                            <svg style="color:#2196f3" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-info">
-                                                <circle cx="12" cy="12" r="10"></circle><line x1="12" y1="16" x2="12" y2="12"></line><line x1="12" y1="8" x2="12.01" y2="8"></line>
-                                            </svg>
-                                        </a>
-                                        <a asp-page="/Products/Edit" asp-route-productId="@item.PrdUid" asp-route-load="true" title="ویرایش" class=" mb-2 mr-2">
-                                            <svg style="color:#e2a03f !important" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-edit-2">
-                                                <path d="M17 3a2.828 2.828 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5L17 3z"></path>
-                                            </svg>
-                                        </a>
-                                        <a class="" onclick="Remove('@item.PrdUid')" title="حذف">
-                                            <svg style="color:#e7515a" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-trash-2">
-                                                <polyline points="3 6 5 6 21 6"></polyline><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path><line x1="10" y1="11" x2="10" y2="17"></line><line x1="14" y1="11" x2="14" y2="17"></line>
-                                            </svg>
-                                        </a>
-
-
-                                        
-                                    </td>
-                                </tr>
-                            }
-
                             </tbody>
                         </table>
                     </div>
@@ -103,6 +57,7 @@
 
     </div>
 </div>
+
 
 
 <div class="modal fade" id="detailsProduct" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -123,6 +78,9 @@
                         <div id="price">
                         <div class="form-row">
 
+                            <div class="col-md-6 mb-5">
+                                <input id="price1" class="form-control basic border-none" value="قیمت1:&nbsp;&nbsp; " readonly="">
+                            </div>
                             <div class="col-md-6 mb-5">
                                 <input id="price2" class="form-control basic border-none" value="قیمت2:&nbsp;&nbsp; " readonly="">
                             </div>
@@ -200,7 +158,7 @@
                             </div>
                         </div>
 
-                      
+                      </div>
                 </div>
                 <div class="modal-footer">
                     <button class="btn" data-dismiss="modal"><i class="flaticon-cancel-12"></i> بستن</button>
@@ -250,9 +208,137 @@
 {
 
     <script>
+         $(document).ready(function () {
+            
+            bindDatatable();
+        });
+
+
+        function bindDatatable() {
+
+            datatable = $('#dataTable_1')
+                .DataTable({
+
+                    "sAjaxSource": "?handler=Data",
+                    "bServerSide": true,
+                    "bProcessing": true,
+                    "bSearchable": true,
+                    "order": [[1, 'asc']],
+                    "language": {
+                        "oPaginate": { "sPrevious": '<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-right"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg>', "sNext": '<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-left"><line x1="19" y1="12" x2="5" y2="12"></line><polyline points="12 19 5 12 12 5"></polyline></svg>' },
+                        "sInfo": "صفحه _PAGE_ از _PAGES_",
+                        "sSearch": '<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-search"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>',
+                        "sSearchPlaceholder": "جستجو کنید...",
+                        "sLengthMenu": "نتایج :  _MENU_",
+                    },
+                    "columns": [
+                        {
+                            data: null,
+                            render: function (data, row, full) {
+                                return generatePhoto(data);
+                            },
+                        },
+                        {
+                            "data": "PrdName",
+                            "autoWidth": true,
+                            "searchable": true
+                        },
+                        {
+                            "data": "PrdLvlName",
+                            "autoWidth": true,
+                            "searchable": true
+                        },
+                        {
+                            "data": "PrdCode",
+                            "autoWidth": true,
+                            "searchable": true
+                        },
+                        {
+                            "data": "TaxName",
+                            "autoWidth": true,
+                            "searchable": true
+                        },
+                        //{
+                        //    "data": "PrdPricePerUnit1",
+                        //    "autoWidth": true,
+                        //    "searchable": true
+                        //},
+
+                        {
+                            data: null,
+                            render: function (data, row, full) {
+                                return renderStatus(data);
+                            },
+                        },
+                        {
+                            data: null,
+                            render: function (data, row, full) {
+                                return generateButton(data);
+                            },
+                        }
+
+                    ]
+                });
+
+
+
+            function generatePhoto(data) {
+                return ` <img src="data:image/jpeg;base64,${data.Image64}" style="max-width:60px"/>`
+            };
+
+            function renderStatus(data) {
+
+                if (data.PrdStatus == false)
+                    return "غیر فعال";
+                else
+                    return "فعال"
+            }
+            function generateButton(data) {
+                
+                return `<a title="جزییات بیشستر" onclick="showModal('${data.PrdUid}')">
+                                                <svg style="color:#2196f3" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-info">
+                                                    <circle cx="12" cy="12" r="10"></circle>
+                                                    <line x1="12" y1="16" x2="12" y2="12"></line>
+                                                    <line x1="12" y1="8" x2="12.01" y2="8"></line>
+                                                </svg>
+                                            </a>
+
+                                               <a  href="/Products/Edit/${data.PrdUid}" title="ویرایش" class=" mb-2 mr-2">
+                                                    <svg style="color:#e2a03f !important" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-edit-2">
+                                                      <path d="M17 3a2.828 2.828 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5L17 3z"></path>
+                                                   </svg>
+                                               </a>
+                                                <a class="" onclick="Remove('${data.PrdUid}')" title="حذف">
+                                                   <svg style="color:#e7515a" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-trash-2">
+                                                       <polyline points="3 6 5 6 21 6"></polyline>
+                                                       <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path>
+                                                       <line x1="10" y1="11" x2="10" y2="17"></line>
+                                                       <line x1="14" y1="11" x2="14" y2="17"></line>
+                                                   </svg>
+                                               </a>
+
+
+
+                                        `
+            };
+
+
+
+
+        }
+
+        //            <a title="تصاویر" onclick="pictures('${data.PrdUid}')">
+        //    <svg style="color:green" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-image">
+        //        <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
+        //        <circle cx="8.5" cy="8.5" r="1.5"></circle>
+        //        <polyline points="21 15 16 10 5 21"></polyline>
+        //    </svg>
+        //</a>
+
+
 
         function Remove(id) {
-            debugger
+            
 
             swal({
                 title: 'آیا مطمئنید؟',
@@ -269,7 +355,7 @@
                         url: "?handler=Remove&id=" + id,
                         type: "get",
                         success: function (result) {
-                            debugger
+                            
                             if (result.isSucceeded) {
                                 swal(
                                     'موفق!',
@@ -311,22 +397,22 @@
 
 
         $('#detailsProduct').on('hidden.bs.modal', function () {
-            debugger
+            
             $(this).find('form').trigger('reset');
         })
 
 
 
         function showModal(id) {
-            debugger;
+            ;
             var prices = document.getElementById("price");
             var times = document.getElementById("time");
             $.ajax({
                 type: "GET",
                 url: "?handler=Details&id=" + id,
                 success: function (result) {
-                    debugger;
-                    debugger;
+                    ;
+                    ;
                     var discountTotal = "";
                     if (result.prdDiscountType == 0)
                         discountTotal = result.prdDiscount + " درصد  ";
@@ -334,13 +420,12 @@
                         discountTotal = result.prdDiscount + "ریال";
 
                    
-                     debugger
-                     debugger
+                     
+                     
                     if(result.type == 2 && result.prdHasTiming == true){
                         times.style.display="block";
                         prices.style.display="none";
-                        //$('#time').fadeIn();
-                        //$('#price').fadeOut();
+
                         $("#PrdBaseTime").val(result.prdBaseTime);
                         $("#PrdBaseCost").val(result.prdBaseCost);
                         $("#PrdExtraTime").val(result.prdExtraTime);
@@ -348,10 +433,10 @@
                         $("#PrdMinCharge").val(result.prdMinCharge);
                     }
                     else{
-                        //$('#price').fadeIn();
-                        //$('#time').fadeOut();
+
                         times.style.display = "none";
                         prices.style.display = "block";
+                    $("#price1").val($("#price1").val() + result.prdPricePerUnit1.toLocaleString());
                     $("#price2").val($("#price2").val() + result.prdPricePerUnit2.toLocaleString());
                     $("#price3").val($("#price3").val() + result.prdPricePerUnit3.toLocaleString());
                     $("#price4").val($("#price4").val() + result.prdPricePerUnit4.toLocaleString() ?? "");
@@ -368,14 +453,8 @@
             });
 
             $("#detailsProduct").modal('show')
-
-            
+          
         }
-
-
-
-
-
 
     </script>
 }
